Fix layout overflowing viewport
Also added header basic structure

--- a/style.css
+++ b/style.css
@@ -2,29 +2,41 @@
   font-family: Roboto, Arial, sans-serif;
 }
 
+:root {
+  --top-page-padding: 40px
+}
+
 ul {
   list-style: none;
-  padding: 0px;
+  padding: 0px
+}
+
+p, li, ul, h1, h2, h3 {
+  margin: 0px;
+}
+
+body {
+  max-height: 100vh;
 }
 
 .layout-container {
-  height: 100vh;
+  max-height: 100vh;
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 4fr;
   grid-template-areas:
     "sidebar header"
-    "sidebar main";
+    "sidebar cards";
 }
 
 .sidebar {
   grid-area: sidebar;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
   padding-left: 40px;
-  padding-top: 40px;
+  padding-top: var(--top-page-padding)
 }
 
 .sidebar div:first-child, .sidebar li {
@@ -43,7 +55,7 @@ ul {
 }
 
 .sidebar li {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 18px;
   font-weight: bold;
 }
@@ -54,11 +66,12 @@ ul {
 
 header {
   grid-area: header;
+  padding-top: var(--top-page-padding);
 }
 
 .cards-container {
-  grid-area: main;
-  display: grid;
+  grid-area: cards;
+  display: grid;  
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas:
@@ -69,8 +82,14 @@ header {
   padding-left: 30px
 }
 
+.list-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .list-container ul {
   display: grid;
+  flex-grow: 1;
 }
 
 .list-container > h1 {
@@ -84,8 +103,7 @@ header {
 .projects ul {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 15px;
-  height: 100%;
+  gap: 15px; 
 }
 
 .announcements {
@@ -98,7 +116,7 @@ header {
   padding: 20px;
 }
 
-.announcements ul h1 {
+.announcements ul h2 {
   font-size: 1em;
 }
 
@@ -112,7 +130,7 @@ header {
 
 .trending ul {
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 10px;
   padding: 10px ;
 }
